tests/ui/parser/issues/issue-19398.rs
trait T {
    extern "Rust" unsafe fn foo();
    //~^ ERROR expected `{`, found keyword `unsafe`
}

fn main() {}
